k8s/app/next-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: pokemons
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
